# controllers/controller.go
@@ -2,7 +2,6 @@ package controllers
 
 import (
 	"github.com/hermannhahn/go-api/database"
-	"github.com/hermannhahn/go-api/docs"
 	"github.com/hermannhahn/go-api/models"
 
 	"net/http"
@@ -10,17 +9,16 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @BasePath /api/products
+// @BasePath /api
 
 // ShowProducts godoc
 // @Summary List all products
 // @Description returns message and a list of products
-// @Tags /api/products
+// @Tags /products
 // @Produce json
 // @Success 200 {object} models.ResponseList
-// @Router /api/products [get]
+// @Router /products [get]
 func ShowProducts(c *gin.Context) {
-	docs.SwaggerInfo.BasePath = "/products"
 	products := models.Products{}
 	database.Connect()
 	database.DB.Find(&products)
@@ -32,13 +30,13 @@ func ShowProducts(c *gin.Context) {
 // ShowProduct godoc
 // @Summary Get product by ID
 // @Description returns message and a product
-// @Tags /api/products
+// @Tags /products
 // @Accept json
 // @Produce json
 // @Param id path string true "Product ID"
 // @Success 200 {object} models.Response
 // @Failure 400 {object} models.Response
-// @Router /api/products/{id} [get]
+// @Router /products/{id} [get]
 func ShowProduct(c *gin.Context) {
 	var product models.Product
 	id := c.Param("id")
@@ -56,37 +54,46 @@ func ShowProduct(c *gin.Context) {
 // SearchProducts godoc
 // @Summary Search products by name, description, category or price
 // @Description returns message and a list of products
-// @Tags /api/products
+// @Tags /products
 // @Accept json
 // @Produce json
 // @Param query path string true "Search term"
 // @Success 200 {object} models.ResponseList
 // @Failure 400 {object} models.ResponseList
-// @Router /api/products/s/{query} [get]
+// @Router /products/s/{query} [get]
 func SearchProducts(c *gin.Context) {
 	products := models.Products{}
 	search := c.Param("query")
 	database.Connect()
-	database.DB.Where("name, description, category, price LIKE ?", "%"+search+"%").Find(&products)
+	database.DB.Where("name LIKE ?", "%"+search+"%").Find(&products)
 	if len(products) == 0 {
-		c.JSON(http.StatusNotFound, gin.H{"error": "Product not found"})
-		return
+		database.DB.Where("description LIKE ?", "%"+search+"%").Find(&products)
+		if len(products) == 0 {
+			database.DB.Where("category LIKE ?", "%"+search+"%").Find(&products)
+			if len(products) == 0 {
+				database.DB.Where("price LIKE ?", "%"+search+"%").Find(&products)
+				if len(products) == 0 {
+					c.JSON(http.StatusNotFound, gin.H{"error": "Product(s) not found"})
+					return
+				}
+			}
+		}
 	}
 	c.JSON(http.StatusOK, gin.H{
-		"message": "Returning results in a slice of products",
+		"message": "Returning results for search term: " + search,
 		"data":    products})
 }
 
 // CreateProduct godoc
 // @Summary Create a new product
 // @Description creates a new product
-// @Tags /api/products
+// @Tags /products
 // @Accept json
 // @Produce json
 // @Param product body models.Product true "Product"
 // @Success 200 {object} models.Response
 // @Failure 400 {object} models.Response
-// @Router /api/products [post]
+// @Router /products [post]
 func CreateProduct(c *gin.Context) {
 	var product models.Product
 	if err := c.ShouldBindJSON(&product); err != nil {
@@ -107,13 +114,13 @@ func CreateProduct(c *gin.Context) {
 // DeleteProduct godoc
 // @Summary Delete a product
 // @Description deletes a product
-// @Tags /api/products
+// @Tags /products
 // @Accept json
 // @Produce json
 // @Param id path string true "Product ID"
 // @Success 200 {object} models.Response
 // @Failure 400 {object} models.Response
-// @Router /api/products/{id} [delete]
+// @Router /products/{id} [delete]
 func DeleteProduct(c *gin.Context) {
 	var product models.Product
 	id := c.Param("id")
@@ -132,13 +139,13 @@ func DeleteProduct(c *gin.Context) {
 // UpdateProduct godoc
 // @Summary Update a product
 // @Description updates a product
-// @Tags /api/products
+// @Tags /products
 // @Accept json
 // @Produce json
 // @Param product body models.Product true "Product"
 // @Success 200 {object} models.Response
 // @Failure 400 {object} models.Response
-// @Router /api/products/{id} [patch]
+// @Router /products/{id} [patch]
 func UpdateProduct(c *gin.Context) {
 	var product models.Product
 	id := c.Param("id")
